[package]
name = "lua-tiktoken"
version = "0.1.0"
edition = "2021"

[features]
luajit = ["mlua/luajit"]

[lib]
name = "tiktoken"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
mlua = { version = "0.9", features = ["module", "send", "luajit"] }
tiktoken-rs = "0"

[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"
